<resources>
    <string name="app_name">美康闹钟</string>
    <!--iconfont字体图标-->
    //登录注册
    <string name="ic_back">&#xe7ed; </string> <!--返回-->
    <string name="ic_scan">&#xe60b; </string> <!--扫码-->
    <string name="ic_location">&#xe611; </string> <!--定位-->
    <string name="ic_pwd">&#xe6c0; </string> <!--密码-->
    <string name="ic_phone">&#xe704; </string> <!--手机-->
    <string name="ic_down">&#xe607; </string> <!--向下-->
    <string name="ic_play">&#xe67d; </string> <!--播放-->
    <string name="ic_close">&#xe80f; </string> <!--关闭-->
    <string name="ic_set">&#xe822; </string> <!--设置-->
    ////支付
    <string name="ic_alipay">&#xe603; </string> <!--支付宝-->
    <string name="ic_weixin">&#xe75a; </string> <!--微信-->
    <string name="ic_shoukuan">&#xe6b1;</string> <!--收款-->
    <string name="ic_select">&#xe637;</string> <!--选择-->
    <string name="ic_checked">&#xe660; </string> <!--选中-->
    <string name="ic_uncheck">&#xe625;</string> <!--未选中-->


    //休闲
    <string name="ic_meirong">&#xe602; </string> <!--美容磁操-->
    <string name="ic_zhenshi">&#xe611; </string> <!--真视明操-->
    <string name="ic_water">&#xe640; </string> <!--喝杯水-->
    <string name="ic_kaifei">&#xe66f; </string> <!--喝咖啡-->
    <string name="ic_more">&#xe601; </string> <!--省略号-->


    //订单
    <string name="ic_obligation">&#xe6ac; </string> <!--待付款-->
    <string name="ic_send">&#xe671; </string> <!--待发货-->
    <string name="ic_receive">&#xe673; </string> <!--待收货-->
    <string name="ic_finish">&#xe675; </string> <!--已完成-->

    //主页
    <string name="ic_shop">&#xe653; </string> <!--商城-->
    <string name="ic_clock">&#xe61f; </string> <!--闹钟-->
    <string name="ic_health">&#xe600; </string> <!--健康管理-->
    <string name="ic_member">&#xe78b; </string> <!--个人-->
    <string name="ic_add">&#xe7e5; </string> <!--添加-->

    //
    <string name="action_share">分享</string>


    //注册登陆
    <string name="user_phone">手机号</string>
    <string name="user_phone_hint">请输入手机号</string>
    <string name="user_code">验证码</string>
    <string name="user_code_hint">请输入验证码</string>
    <string name="user_get_code">获取验证码</string>
    <string name="user_pwd">密码</string>
    <string name="user_new_pwd">新密码</string>
    <string name="user_new_pwd01">确认密码</string>
    <string name="user_pwd_hint">请输入密码</string>
    <string name="user_new_pwd_hint">请输入新密码</string>
    <string name="user_new_pwd01_hint">请再一次输入密码</string>
    <string name="user_referralCode">邀请码</string>
    <string name="user_referralCode_hint">请输入邀请码，如无可不填</string>
    <string name="user_register">注册</string>
    <string name="user_login">登录</string>
    <string name="user_forget_pwd">忘记密码？</string>
    <string name="user_register_account">注册账号</string>
    <string name="user_confirm">确认</string>
    <string name="user_logout">退出账号</string>
    <string name="title_activity_welcome2">Sign in</string>


    <!--个人中心-->
    <string name="app_people_all_order">订单记录</string>
    <string name="app_people_looker_all">查看</string>
    <string name="app_people_obligation">待付款</string>
    <string name="app_people_shipments">待发货</string>
    <string name="app_people_Receiving">待收货</string>
    <string name="app_people_after_sale">已完成</string>

    <string name="permission_camera">App扫码需要用到拍摄权限</string>
    <string name="tips_scan_code1">将二维码放入框内，即可自动扫描</string>

    <string name="qr_code">二维码</string>
    <string name="bar_code">条形码</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--支付宝-->
    <string name="demo_info_text">重要说明: \n\n本 Demo 为了方便向商户展示支付宝的支付流程，所以订单信息的加签过程放在客户端完成。\n在商户的真实App内，为了防止商户私密数据泄露，引发资金损失和身份冒用等各种安全风险，商户私钥 RSA_PRIVATE 等数据严禁放在客户端，订单信息的加签过程也务必放在服务端完成。\n若商户接入时不遵照此说明而造成损失，需自行承担。</string>
    <string name="pay_with_alipay">支付宝支付 Demo</string>
    <string name="pay_with_alipay_hk">HK 支付宝支付 Demo</string>
    <string name="auth_with_alipay">支付宝授权 Demo</string>
    <string name="web_to_native">网页支付转 native 支付 Demo</string>
    <string name="check_sdk_version">支付宝 SDK 版本</string>
    <string name="pay_success">支付成功:</string>
    <string name="pay_failed">支付失败:</string>
    <string name="auth_success">授权成功:</string>
    <string name="auth_failed">授权失败:</string>
    <string name="permission_already_granted">支付宝 SDK 已有所需的权限</string>
    <string name="permission_rejected">无法获取支付宝 SDK 所需的权限, 请到系统设置开启</string>
    <string name="permission_granted">支付宝 SDK 所需的权限已经正常获取</string>
    <string name="error_missing_appid_rsa_private">错误: 需要配置 PayDemoActivity 中的 APPID 和 RSA_PRIVATE</string>
    <string name="error_missing_hk_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_HK 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="pay_result">支付结果:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">错误: 需要配置PARTNER |APP_ID| RSA_PRIVATE| TARGET_ID</string>
    <string name="alipay_sdk_version_is">支付宝 SDK 版本:</string>
    <string name="confirm">确定</string>
    <string name="error_missing_h5_pay_url">必须配置需要打开的url 站点，请在PayDemoActivity类的h5Pay中配置</string>
    <string name="error">错误</string>
    <string name="pay_cross_border">境外收单支付 Demo</string>
    <string name="error_missing_global_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_Global 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="payment_inst_hk">付款方: HK</string>
    <string name="payment_inst_cn">付款方: CN</string>
    <!--闹钟-->
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="repeat_once">只响一次</string>
    <string name="one_h">一</string>
    <string name="two_h">二</string>
    <string name="three_h">三</string>
    <string name="four_h">四</string>
    <string name="five_h">五</string>
    <string name="six_h">六</string>
    <string name="day">日</string>
    <string name="every_day">每天</string>
    <string name="week_day">工作日</string>
    <string name="week_end">周末</string>
    <string name="week">周</string>
    <string name="caesura">、</string>
    <string name="countdown_day_hour_minute">距闹钟响起还有%1$d天%2$d小时%3$d分</string>
    <string name="countdown_hour_minute">距闹钟响起还有%1$d小时%2$d分</string>
    <string name="countdown_minute">距闹钟响起还有%1$d分钟</string>
    <string name="version">1.1.3</string>
    <string name="alarm_clock">闹钟</string>
    <string name="default_ring">默认铃声</string>

    <string name="warm_tips_title">温馨提示</string>
    <string name="warm_tips_detail">亲，由于Android系统限制，如不响铃，可能是如下原因：\n
    1.闹钟未被加入安全软件的应用保护名单\n
    2.闹钟后台已被安全类软件误清理\n
    3.软件安装在SD卡\n
    4.关机</string>
    <string name="roger">知道了</string>
    <string name="no_tip">不再提示</string>


    <!-- 闹钟响起界面 -->
    <string name="touch_here_nap">轻按此处小睡%1$d分钟</string>
    <string name="close_alarm_clock">右滑关闭闹钟</string>
    <string name="xx_naping">%1$s (小睡中……)</string>
    <string name="nap_to">小睡至%1$s闹钟再次响起，轻触取消</string>
    <string name="nap_time">小睡%1$d分钟</string>
    <string name="weather_type">%1$s&#160;%2$s~%3$s℃</string>
    <string name="bring_an_umbrella">带伞</string>
    <string name="alarm_error">未知闹钟异常</string>

    <!-- 小睡编辑界面 -->
    <string name="nap_set">小睡设置</string>
    <string name="interval">间隔 (分钟)</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="eight">8</string>
    <string name="ten">10</string>
    <string name="twenty">20</string>
    <string name="thirty">30</string>
    <string name="num">60</string>
    <string name="times">次数</string>
    <string name="cancel">取消</string>


    <!-- 铃声选择界面 -->
    <string name="ring_select">铃声选择</string>
    <string name="no_system_ring_file">没有系统铃声文件</string>
    <string name="no_local_music_file">没有本地音乐文件</string>
    <string name="no_record_file">没有录音文件</string>
    <string name="save">保存</string>
    <string name="system_ring">系统铃声</string>
    <string name="local_music">本地音乐</string>
    <string name="record">录音</string>
    <string name="no_ring">无铃声</string>
    <string name="no_sd_card">无存储设备</string>
    <!-- 音频播放 -->
    <string name="play_fail">播放失败</string>

    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wed">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sat">周六</string>
    <string name="sun">周日</string>
    <string name="cycle_sure">确定</string>
    <string name="vibration">震动</string>
    <string name="ring">铃声</string>
</resources>
