<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.RegisterActivity">

    <include layout="@layout/topbar_nor"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_edittext"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center|left"
            android:text="@string/user_phone"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/register_et_phone"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/user_phone_hint"
            android:inputType="number"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_edittext"
        android:layout_margin="10dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left|center"
            android:text="@string/user_code"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="7"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/register_et_code"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@null"
                android:drawablePadding="10dip"
                android:hint="@string/user_code_hint"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="14sp" />

            <com.healthclock.healthclock.widget.BorderTextView
                android:id="@+id/send_code_btn"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dip"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/user_get_code"
                android:textColor="?title_text_color"
                android:textSize="12sp"
                app:contentBackColor="@color/white"
                app:cornerRadius="@dimen/dp_20"
                app:strokeColor01="?title_text_color"
                app:strokeWidth01="1dp" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_edittext"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center|left"
            android:text="@string/user_pwd"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/register_et_pwd"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/user_pwd_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_edittext"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center|left"
            android:text="@string/user_referralCode"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/register_et_referralCode"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/user_referralCode_hint"
            android:inputType="number"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/line"></View>
    <com.healthclock.healthclock.widget.BorderTextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="28dip"
        android:gravity="center"
        android:padding="8dip"
        android:text="@string/user_register"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:contentBackColor="@color/bt_gray"
        app:cornerRadius="@dimen/dp_20"
        app:strokeColor01="@color/bt_gray"
        app:strokeWidth01="1dp"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox01"
            style="@style/mycheckbox1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:checked="true" />

        <TextView
            android:id="@+id/protocol_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="我已阅读本协议"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/protocol_tv01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="《美康闹钟用户协议》"
            android:textColor="?title_text_color"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>