<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.healthclock.healthclock.widget.IconFontTextView
                android:id="@+id/if_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_clock"
                android:textColor="?title_text_color"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5px"
                android:text="闹钟"
                android:textColor="?title_text_color"
                android:textSize="@dimen/sp_14" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.healthclock.healthclock.widget.IconFontTextView
                android:id="@+id/if_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_shop"
                android:textColor="?title_text_color"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5px"
                android:text="健康套餐"
                android:textColor="?title_text_color"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.healthclock.healthclock.widget.IconFontTextView
                android:id="@+id/if_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_member"
                android:textColor="?title_text_color"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5px"
                android:text="个人中心"
                android:textColor="?title_text_color"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>